2005-05-11  Mike Kestner  <mkestner@novell.com>

	* gtk/Widget.custom : manual ListMnemonicLabels implementation to
	return a Widget[].  [Fixes #74786]

2005-05-11  Mike Kestner  <mkestner@novell.com>

	* generator/ObjectGen.cs : default empty assembly names for the
	mapper.  [Fixes #74769]

2005-05-10  Mike Kestner  <mkestner@novell.com>

	* gtk/Object.custom : Dispose on a Destroyed event.
	* gtk/Widget.custom : rework the parent_set hack to go direct to
	the native signal instead of using the event so we avoid rewrapping of
	already destroyed parents.

2005-05-10  Mike Kestner  <mkestner@novell.com>

	* gdk/Pixbuf.custom : use non-obsolete PixbufLoader.Write overload.
	* gdk/PixbufLoader.custom : add obsolete PixbufLoader.Write overload
	for the uint case for backcompat. Update other uses to the new ulong
	overload.
	* sample/GtkDemo/DemoImage.cs : use PixbufLoader.Write (byte[])
	overload.

2005-05-09  Mike Kestner  <mkestner@novell.com>

	* glib/Object.cs : add a try/catch block to g_object_unref calls to
	help identify "extra unref" bugs when exceptions occur.

2005-05-06  John Luke  <john.luke@gmail.com>

	* pango/Makefile.am: add Matrix.custom
	* pango/Matrix.custom: add Pango.Matrix.Identity field
	which is the equivalent of PANGO_MATRIX_INIT
	* sample/GtkDemo/DemoRotatedText.cs: use Pango.Matrix.Identity
	* doc/en/Pango/Matrix.xml: add docs	for Pango.Matrix.Identity
										
2005-05-06  Mike Kestner  <mkestner@novell.com>

	* configure.in.in : always enable debug build in maintainer_mode.

2005-05-06  Mike Kestner  <mkestner@novell.com>

	* gdk/Pixbuf.custom : move the GetCallingAssembly invocations back out
	the the public methods.
	* gdk/PixbufLoader.custom : ditto.

2005-05-06  Mike Kestner  <mkestner@novell.com>

	* bootstrap :
	* bootstrap-2.4 : use ln instead of cp for api files so reparsing
	causes rebuilds.
	* sources/gtk-sharp-2.6-sources.xml : moved from gtk-sharp-sources.xml
	plus fixed the pango, atk, and gdk raw filenames.