@@ -1497,5 +1497,23 @@ The above example creates a new three columns list store. The types of the colum
         <remarks>To be added</remarks>
       </Docs>
     </Member>
+    <Member MemberName="GetEnumerator">
+      <MemberSignature Language="C#" Value="public virtual System.Collections.IEnumerator GetEnumerator ();" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Collections.IEnumerator</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>
+          <para>Returns a <see cref="T:System.Collections.IEnumerator" /> for the current instance.</para>
+        </summary>
+        <returns>a <see cref="T:System.Collections.IEnumerator" /></returns>
+        <remarks>
+          <para> If the elements of the current instance are modified while an enumeration is in progress, a call to <see cref="M:System.Collections.IEnumerator.MoveNext" /> or <see cref="P:System.Collections.IEnumerator.Current" /> throws <see cref="T:System.InvalidOperationException" />.</para>
+	</remarks>
+      </Docs>
+    </Member>
   </Members>
 </Type>
+
