@@ -164,3 +164,9 @@
 		{
 			DefaultSortFunc = sort_func;
 		}
+
+		public IEnumerator GetEnumerator()
+		{
+			return new TreeEnumerator(this);
+		}
+
