@@ -1,3 +1,10 @@
+2005-05-11  Eric Butler  <eric@extremeboredom.net>
+
+	* gtk/Gtk.metadata : add IEnumerable iface to ListStore.
+	* gtk/ListStore.cs : add GetEnumerator.
+	* gtk/Makefile.am : add file.
+	* gtk/TreeEnumerator.cs : root node enumerator for a TreeModel.
+
 2005-05-11  Mike Kestner  <mkestner@novell.com>
 
 	* gtk/Widget.custom : manual ListMnemonicLabels implementation to
